add version display

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -85,6 +85,19 @@
      </font>
     </property>
    </widget>
+   <widget class="QLabel" name="LabelVersion">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>530</y>
+      <width>321</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
